--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+egui = "0.28.1"
+eframe = "0.27.2"
+egui_extras = "0.27.2"
+env_logger = "0.11.3"
+log = "0.4.22"
+ureq = "2.9.7"
+tinyfiledialogs = "3.1"
