--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ env_logger = "0.11.3"
 log = "0.4.22"
 ureq = "2.9.7"
 tinyfiledialogs = "3.1"
+image = { version = "0.24", features = ["jpeg", "png"] }
